--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,14 +3,20 @@
 @tailwind utilities;
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  --black: #1A1A1A;
+  --white: #EAE4D3;
+  --danger: #B35442;
+  --primary: #5A7D3A;
+  --secundary: #C27A4A;
+
+  --background: var(--white);
+  --foreground: var(--black);
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+    --background: var(--black);
+    --foreground: var(--white);
   }
 }
 
