--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -13,12 +13,12 @@
   --foreground: var(--black);
 }
 
-@media (prefers-color-scheme: dark) {
+/* @media (prefers-color-scheme: dark) {
   :root {
     --background: var(--black);
     --foreground: var(--white);
   }
-}
+} */
 
 body {
   color: var(--foreground);
