--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,6 +5,8 @@
 :root {
   --black: #1A1A1A;
   --white: #EAE4D3;
+  --white-opacity: rgba(234, 228, 211, 0.95);
+
   --danger: #B35442;
   --primary: #5A7D3A;
   --secundary: #C27A4A;
